# FederatedLearningPlayground

./: .gitignore  ARCHITECTURE.md  README.md  claude.md  pyproject.toml
configs/: async_fedavg.yaml  baseline.yaml  dp_fedavg.yaml  noniid_strict.yaml
src/flp/: __init__.py  cli.py
src/flp/compression/: __init__.py  error_feedback.py  quantization.py  topk.py
src/flp/core/: __init__.py  aggregator.py  async_server.py  client.py  event_loop.py  models.py  server.py  staleness.py  trainer.py
src/flp/experiments/: __init__.py  config_loader.py  runner.py
src/flp/governance/: __init__.py  audit.py  hashing.py  replay.py
src/flp/metrics/: __init__.py  communication.py  tracker.py
src/flp/privacy/: __init__.py  clipping.py  dp.py
src/flp/research/: __init__.py  divergence.py  fairness.py
src/flp/simulation/: __init__.py  delay.py  dropout.py  partitioning.py
src/flp/visualization/: __init__.py  plots.py
tests/: test_aggregator.py  test_async.py  test_compression.py  test_config_loader.py  test_dropout.py  test_governance.py  test_metrics.py  test_partitioning.py  test_regulatory.py  test_research.py  test_staleness.py
